@@ -1,3 +1,12 @@
+2008-05-12  Bruno Haible  <bruno@clisp.org>
+
+	Clear spurious error messages on MacOS X 10.5.
+	* m4/address.m4 (CL_ADDRESS_RANGE): Remove conftest.dSYM directory
+	before conftest* files.
+	* m4/eloop.m4 (CL_ELOOP): Likewise.
+	* m4/filecharset.m4 (CL_FILECHARSET): Likewise.
+	* m4/param.m4 (CL_MACHINE): Likewise.
+
 2008-05-12  Sam Steingold  <sds@gnu.org>
 
 	* Makefile.devel (tp-mail): put clisp version into the subject line
